...

  File? image;
  UploadTask? uploadTask;

  List<String> listValue = [
    "-- Select a hobby --",
    "arts and crafts",
    "board/card games",
    "cooking/baking",
    "dancing",
    "gardening and plants",
    "meditation/wellness",
    "outdoor activities",
    "partying/clubbing",
    "pets",
...
            ),
            TextButton(
              onPressed: () {
                Navigator.of(context).pop(true);
              },
              child: const Text(
                key: Key('return_text'),
                'Return',
                style: TextStyle(
                  color: Color.fromARGB(255, 63, 50, 30),
                  fontWeight: FontWeight.bold,
                ),
              ),
...
                  // Name title
                  userProf.generateEditTitle('Name'),
                  const SizedBox(height: 10.0),

                  // Name textfield
                  userProf.generateTextField(
                      'name', 'name_field', _nameController),
                  const SizedBox(height: 30),

                  // Telegram handle title
                  userProf.generateEditTitle('Telegram Handle'),
                  const SizedBox(height: 10.0),

                  // Telegram handle textfield
                  userProf.generateTextField('tele handle', 'tele_handle_field',
                      _teleHandleController),
                  const SizedBox(height: 30),

                  // Year of study title
                  userProf.generateEditTitle('Year of Study (e.g. 1, 2)'),
                  const SizedBox(height: 10.0),
...
                  // Degree title
                  userProf.generateEditTitle('Degree (e.g. Computer Science)'),
                  const SizedBox(height: 10.0),

                  // Degree textfield
                  userProf.generateTextField(
                      'degree', 'degree_field', _degreeController),
                  const SizedBox(height: 30),

                  // Hobbies title
                  userProf.generateEditTitle('Hobbies (Select 3)'),
                  const SizedBox(height: 10.0),

...
                        border: Border.all(color: Colors.white),
                      ),
                      width: 370,
                      height: 50,
                      child: DropdownButtonHideUnderline(
                        child: DropdownButton<String>(
                          key: const Key('hobby1_field'),
                          padding: const EdgeInsets.only(left: 20.0),
                          value: dropdownValue1,
                          items: listValue
                              .map<DropdownMenuItem<String>>((String value) {
                            return DropdownMenuItem<String>(
                              value: value,
...
                      width: 370,
                      height: 50,
                      child: Padding(
                        padding: const EdgeInsets.only(left: 20.0),
                        child: DropdownButtonHideUnderline(
                          child: DropdownButton<String>(
                            key: const Key('hobby2_field'),
                            value: dropdownValue2,
                            items: listValue
                                .map<DropdownMenuItem<String>>((String value) {
                              return DropdownMenuItem<String>(
                                value: value,
                                child: Text(
...
                      width: 370,
                      height: 50,
                      child: Padding(
                        padding: const EdgeInsets.only(left: 20.0),
                        child: DropdownButtonHideUnderline(
                          child: DropdownButton<String>(
                            key: const Key('hobby3_field'),
                            value: dropdownValue3,
                            // Step 4.
                            items: listValue
                                .map<DropdownMenuItem<String>>((String value) {
                              return DropdownMenuItem<String>(
                                value: value,
...
                        try {
                          await editProfile();
                          Navigator.of(this.context).pushNamedAndRemoveUntil(
                              profileRoute, (route) => false);
                        } on EmptyFieldException {
                          await showErrorDialog(this.context,
                              'Please complete all fields', 'empty_field');
                        } on RepeatedHobbyException {
                          showErrorDialog(
                              this.context,
                              'Please ensure there are no repeated hobbies',
                              'repeated_hobby');
                        } on InvalidYearException {
                          showErrorDialog(this.context,
                              'Please input a valid year', 'invalid_year');
                        }
                      },
                      style: ElevatedButton.styleFrom(
                        backgroundColor: const Color.fromARGB(255, 68, 23, 13),
                        side: BorderSide.none,
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(12),
                        ),
                      ),
                      child: Text(
                        "Update Changes",
                        key: const Key('update_changes'),
                        style: GoogleFonts.comfortaa(
                          textStyle: const TextStyle(
                            fontSize: 18,
                            color: Color.fromARGB(255, 241, 233, 221),
                            fontWeight: FontWeight.bold,
                          ),
...
