...
      child: ClipRRect(
        borderRadius: BorderRadius.circular(100),
        child: profile.profilePic != "" // checking if input is null or not
            ? Image.network(
                profile.profilePic,
                fit: BoxFit.cover,
                key: const Key('profile_pic'),
              )
            : const CircleAvatar(
                backgroundColor: Color(0xffE6E6E6),
                radius: 10,
                child: Icon(Icons.person, color: Color(0xffCCCCCC), size: 100),
              ),
...
          border: Border.all(color: Colors.white),
          borderRadius: BorderRadius.circular(12),
        ),
        child: Padding(
          padding: const EdgeInsets.only(left: 20.0),
          child: TextFormField(
            key: const Key('year_field'),
            controller: controller,
            enableSuggestions: false,
            autocorrect: false,
            cursorColor: const Color.fromARGB(255, 68, 23, 13),
            keyboardType: TextInputType.number,
            decoration: InputDecoration(
...
