...
                            shape: RoundedRectangleBorder(
                              borderRadius: BorderRadius.circular(12),
                            ),
                          ),
                          child: Text(
                            "Edit Profile",
                            key: const Key('edit_profile_button'),
                            style: GoogleFonts.comfortaa(
                              textStyle: const TextStyle(
                                fontSize: 18,
                                color: Color.fromARGB(255, 241, 233, 221),
                                fontWeight: FontWeight.bold,
                              ),
...
            TextButton(
              onPressed: () {
                Navigator.of(context).pop(true);
              },
              child: const Text(
                'Logout',
                key: Key('logout_text'),
                style: TextStyle(
                  color: Color.fromARGB(255, 63, 50, 30),
                  fontWeight: FontWeight.bold,
                ),
              ),
            ),
...
